# ufeed

./: .dir-locals.el  .ghci  .gitignore  LICENSE  Makefile  README.org  default.nix  queries.http  shell.generic.nix  shell.nix  stack.yaml  ufeed.cabal  ufeed.nix
app/: Main.hs  Server.hs
data/: atom1.0.sample2.xml  atom1.0.sample3.xml  rss2.sample2.xml  rss2.sample3.xml
src/: Api.hs  Converter.hs  FeedConfig.hs  FeedProcessor.hs  FeedReader.hs  FeedUpdater.hs  Model.hs  Sanitizer.hs  SanitizerNew.hs  Types.hs  Util.hs
src/Converter/: Atom.hs  RSS.hs
src/Query/: Atom.hs  RSS.hs
test/: FeedReaderSpec.hs  FeedUpdaterSpec.hs  SanitizerSpec.hs  TestHelper.hs
test/Converter/: AtomSpec.hs  RSSSpec.hs
test/Mocks/: Atom.hs  FeedUpdater.hs  RSS.hs  Sanitizer.hs
test/Query/: AtomSpec.hs  RSSSpec.hs
test/data/: aa.2015review.html  atom0.3.sample1.xml  atom1.0.sample4.xml  atom1.0.sample5.xml  atom1.0.sample6.xml  hello.xml  pg.swan.html  rss2.sample1.xml  rss2.sample4.xml  rss2.sample5.xml  rss2.sample6.xml  rss2.sample7.xml  ujc.ttnc.html
