name:                ufeed
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/gabesoft/ufeed#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Adomnicai
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Model
                     , Api
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4
                     , lens
                     , aeson >= 0.11
                     , containers >= 0.5
                     , text
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable ufeed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ufeed
  default-language:    Haskell2010

test-suite ufeed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ufeed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/ufeed
