name:                ufeed
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/gabesoft/ufeed#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Adomnicai
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Web
build-type:          Simple
extra-source-files:  test/Mocks/Atom.hs
                   , test/Mocks/RSS.hs
                   , test/TestHelper.hs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Converter
                     , Converter.Atom
                     , Converter.RSS
                     , FeedReader
                     , Sanitizer
                     , Types
                     , Util
  build-depends:       aeson >= 0.11
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , http-types >= 0.9
                     , hxt
                     , HandsomeSoup
                     , iso8601-time >= 0.1
                     , lens
                     , raw-strings-qq
                     , text
                     , time >= 1.5
                     , wreq >= 0.4
                     , xml >= 1.3
                     , xml-conduit >= 1.3.5
  default-language:    Haskell2010

executable ufeed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ufeed
  default-language:    Haskell2010

test-suite query-atom
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, test/Converter, test/Mocks
  main-is:             AtomSpec.hs
  build-depends:       base
                     , bytestring
                     , ufeed
                     , hspec
                     , xml-conduit
  other-modules:       Mocks.Atom
                     , Mocks.RSS
                     , TestHelper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite query-rss
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, test/Converter, test/Mocks
  main-is:             RSSSpec.hs
  build-depends:       base
                     , bytestring
                     , ufeed
                     , hspec
                     , xml-conduit
  other-modules:       Mocks.Atom
                     , Mocks.RSS
                     , TestHelper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sanitizer
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SanitizerSpec.hs
  build-depends:       base
                     , bytestring
                     , ufeed
                     , hspec
                     , raw-strings-qq
                     , xml-conduit
  other-modules:       Mocks.Sanitizer
                     , TestHelper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/ufeed
