name:                ufeed
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.org
homepage:            https://github.com/gabesoft/ufeed#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Adomnicai
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Converter
                     , Converter.Atom
                     , Converter.RSS
                     , FeedConfig
                     , FeedReader
                     , FeedUpdater
                     , Sanitizer
                     , Types
                     , Util
  build-depends:       aeson >= 0.11
                     , async >= 2.1
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , connection >= 0.2
                     , HandsomeSoup
                     , http-client >= 0.5
                     , http-client-tls >= 0.2
                     , http-media
                     , http-types >= 0.9
                     , hxt
                     , iso8601-time >= 0.1
                     , lens >= 4.13
                     , mtl >= 2.2
                     , raw-strings-qq
                     , tagsoup
                     , text >= 1.2
                     , time >= 1.5
                     , transformers >= 0.4
                     , wreq >= 0.5
                     , xml >= 1.3
                     , xml-conduit >= 1.3.5
  default-language:    Haskell2010

executable ufeed-updater
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , ufeed
                     , async >= 2.1
                     , text >= 1.2
                     , time >= 1.5
                     , pretty-show
  default-language:    Haskell2010

executable ufeed-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , aeson >= 0.11
                     , async >= 2.1
                     , blaze-builder >= 0.4
                     , blaze-html >= 0.8
                     , bytestring >= 0.10
                     , http-client >= 0.4
                     , http-types >= 0.9
                     , pretty-show
                     , shakespeare
                     , text >= 1.2
                     , time >= 1.5
                     , ufeed
                     , utf8-string >= 1.0
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010


test-suite converter-atom
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ConverterAtomSpec.hs
  other-modules:       Mocks.Atom
                     , TestHelper
  build-depends:       base
                     , bytestring
                     , hspec
                     , lens >= 4.13
                     , text >= 1.2
                     , ufeed
                     , xml-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite converter-rss
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ConverterRssSpec.hs
  other-modules:       Mocks.RSS
                     , TestHelper
  build-depends:       base
                     , bytestring
                     , hspec
                     , lens >= 4.13
                     , text >= 1.2
                     , ufeed
                     , xml-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sanitizer
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SanitizerSpec.hs
  build-depends:       base
                     , bytestring
                     , ufeed
                     , hspec
                     , raw-strings-qq
                     , text >= 1.2
                     , xml-conduit
  other-modules:       Mocks.Sanitizer
                     , TestHelper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite feed-updater
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             FeedUpdaterSpec.hs
  build-depends:       base
                     , bytestring
                     , containers >= 0.5
                     , iso8601-time >= 0.1
                     , lens >= 4.13
                     , hspec
                     , raw-strings-qq
                     , text >= 1.2
                     , time >= 1.5
                     , ufeed
                     , xml-conduit
  other-modules:       Mocks.FeedUpdater
                     , TestHelper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite feed-reader
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             FeedReaderSpec.hs
  build-depends:       base
                     , bytestring
                     , containers >= 0.5
                     , lens >= 4.13
                     , hspec
                     , text >= 1.2
                     , ufeed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/ufeed
